[package]
name = "drg-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deeprockgalactic-saveeditor = { git = "https://github.com/localcc/deeprockgalactic-saveeditor" }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
