[package]
name = "drg-info"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"

[dependencies.deeprockgalactic-saveeditor]
git = "https://github.com/localcc/deeprockgalactic-saveeditor"
rev = "22ebf4d3b1c4d3a9e94544ae50ffc77a4a5ca9c5"
